--- a/app/src/main/res/layout/activity_transmitir.xml
+++ b/app/src/main/res/layout/activity_transmitir.xml
@@ -16,7 +16,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
-        android:layout_centerVertical="true"
+        android:layout_alignParentTop="true"
         android:layout_alignParentStart="true">
 
         <RelativeLayout
@@ -44,14 +44,33 @@
             android:layout_alignParentEnd="true"
             android:layout_marginEnd="12dp">
 
-            <EditText
-                android:gravity="center"
+
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:id="@+id/editexto"
-                android:focusable="true"
-                android:layout_centerVertical="true"
-                android:layout_alignParentStart="true" />
+                android:orientation="horizontal">
+
+                <EditText
+                    android:textColor="#FFFFFF"
+                    android:hint="Escriba el texto .."
+                    android:textColorHint="#FFFFFF"
+                    android:gravity="center"
+                    android:layout_width="250dp"
+                    android:layout_height="wrap_content"
+                    android:id="@+id/editexto"
+                    android:focusable="true"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentStart="true" />
+
+                <Button
+                    android:onClick="borrar"
+                    android:background="@drawable/ic_delete_white_48dp"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp" />
+
+            </LinearLayout>
+
+
 
             <ScrollView
                 android:layout_width="match_parent"
@@ -62,11 +81,6 @@
                     android:layout_height="match_parent"
                     android:orientation="vertical">
 
-                    <View
-                        android:layout_margin="10dp"
-                        android:layout_width="match_parent"
-                        android:layout_height="1dp"
-                        android:background="@android:color/darker_gray"/>
 
                     <TextView
                         android:textColor="#FFFFFF"
@@ -88,7 +102,7 @@
                             android:layout_gravity="center_vertical"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="Direccion desplazamiento"
+                            android:text="Direccion "
                             android:layout_margin="10dp"/>
 
                         <Button
@@ -121,12 +135,13 @@
                         android:orientation="horizontal">
 
                         <TextView
+                            android:gravity="center"
                             android:textColor="#FFFFFF"
                             android:layout_gravity="center_vertical"
                             android:layout_margin="10dp"
-                            android:layout_width="wrap_content"
+                            android:layout_width="100dp"
                             android:layout_height="wrap_content"
-                            android:text="Velocidad \ndesplazamiento"/>
+                            android:text="Velocidad"/>
 
                         <SeekBar
                             android:id="@+id/seekBar"
@@ -218,6 +233,28 @@
                             android:layout_width="50dp"
                             android:layout_height="50dp"
                             android:background="@drawable/ic_palette_white_48dp"/>
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:gravity="center"
+                            android:textColor="#FFFFFF"
+                            android:layout_margin="10dp"
+                            android:layout_width="100dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center_vertical"
+                            android:text="Brillo"/>
+
+                        <SeekBar
+                            android:id="@+id/seekBarBrillo"
+                            android:background="#DFDFDF"
+                            android:layout_margin="10dp"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
                     </LinearLayout>
 
                     <View
